<resources>
    <string name="app_name">RxTest</string>

    <string name="operators">操作符</string>
    <string name="test">测试</string>
    <string name="simple">simple</string>
    <string name="map">map</string>
    <string name="zip">zip</string>
    <string name="disposable">disposable</string>
    <string name="take">take</string>
    <string name="timer">timer</string>
    <string name="interval">interval</string>
    <string name="single">single</string>
</resources>
