<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">
        <Button
            android:id="@+id/simple_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simple"/>
        <Button
            android:id="@+id/map_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/map"/>
        <Button
            android:id="@+id/zip_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zip"/>
        <Button
            android:id="@+id/disposable_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disposable"/>
        <Button
            android:id="@+id/take_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/take"/>
        <Button
            android:id="@+id/timer_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timer"/>
        <Button
            android:id="@+id/interval_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/interval"/>
        <Button
            android:id="@+id/single_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/single"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>